@@ -32,3 +32,6 @@ Changes between 2.2.3 and 2.2.4
 - fix issue 140: propperly get the real functions
   of bound classmethods for setup/teardown_class
 - fix issue #141: switch from the deceased paste.pocoo.org to bpaste.net
+- fix issue #143: call unconfigure/sessionfinish always when
+  configure/sessionstart where called
+
